Error message and login/signup design

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -256,3 +256,16 @@ html, body {
 .mdl-switch{
     width: 45%;
 }
+.fullwidth{
+    width: 100% !important;
+}
+.has-error, .has-error label{
+    color: #a94442 !important;
+}
+.has-error input{
+    border-color: #a94442 !important;
+}
+.has-error + span{
+    position: absolute;
+    bottom: 0;
+}
