--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -3669,3 +3669,5 @@ Copyright (c) 2015 Daniel Eden
     right: -2%;
     top: -12%;
 }
+.grid-item { width: 100px;margin: 5px }
+.grid-item1 { width: 100px;margin: 5px }
